// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageRequestItem component should display a selected request 1`] = `
<ManageRequestItem
  requestId={2}
  requests={
    Immutable.List [
      Immutable.Map {
        id: 1,
        name: "a",
      },
      Immutable.Map {
        id: 2,
        name: "b",
      },
    ]
  }
>
  <div>
    <Breadcrumb
      tag="ol"
    >
      <ol
        className="breadcrumb"
      >
        <BreadcrumbItem
          tag="li"
        >
          <li
            className="breadcrumb-item"
          >
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/settings/requests"
            >
              <a
                onClick={[Function]}
                style={Object {}}
              >
                Manage Requests
              </a>
            </Link>
          </li>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          <li
            className="active breadcrumb-item"
          >
            Create Request
          </li>
        </BreadcrumbItem>
      </ol>
    </Breadcrumb>
    <h1
      className="mb-3"
    >
      Create Request
    </h1>
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <InputField
          help="The request name will appear on the ticket (similar to tags). Try to keep it short and simple."
          label="Name"
          name="name"
          onChange={[Function]}
          placeholder="Refund policy"
          required={true}
          type="text"
          value="b"
        >
          <FormGroup
            className="undefined"
            color=""
            tag="div"
          >
            <div
              className="undefined form-group"
            >
              <Label
                className="control-label"
                htmlFor="id-name"
                tag="label"
              >
                <label
                  className="control-label  form-control-label"
                  htmlFor="id-name"
                >
                  Name
                </label>
              </Label>
              <div
                className=""
              >
                <Input
                  className=""
                  id="id-name"
                  onChange={[Function]}
                  placeholder="Refund policy"
                  required={true}
                  tag="p"
                  type="text"
                  value="b"
                >
                  <input
                    className="form-control"
                    id="id-name"
                    onChange={[Function]}
                    placeholder="Refund policy"
                    required={true}
                    type="text"
                    value="b"
                  />
                </Input>
              </div>
              <FormText
                color="muted"
                tag="small"
              >
                <small
                  className="form-text text-muted"
                >
                  The request name will appear on the ticket (similar to tags). Try to keep it short and simple.
                </small>
              </FormText>
            </div>
          </FormGroup>
        </InputField>
        <InputField
          help="One example sentence per line. For best results: keep them short (5-10 words), as many and as variate as possible. Note that we ignore: order of words, case of the text, common words (Ex: the, and, etc..) and punctuation."
          label="Sample statements"
          name="samples"
          onChange={[Function]}
          required={true}
          rows={3}
          type="textarea"
        >
          <FormGroup
            className="undefined"
            color=""
            tag="div"
          >
            <div
              className="undefined form-group"
            >
              <Label
                className="control-label"
                htmlFor="id-samples"
                tag="label"
              >
                <label
                  className="control-label  form-control-label"
                  htmlFor="id-samples"
                >
                  Sample statements
                </label>
              </Label>
              <div
                className=""
              >
                <Input
                  className=""
                  id="id-samples"
                  onChange={[Function]}
                  required={true}
                  rows={3}
                  tag="p"
                  type="textarea"
                >
                  <textarea
                    className="form-control"
                    id="id-samples"
                    onChange={[Function]}
                    required={true}
                    rows={3}
                  />
                </Input>
              </div>
              <FormText
                color="muted"
                tag="small"
              >
                <small
                  className="form-text text-muted"
                >
                  One example sentence per line. For best results: keep them short (5-10 words), as many and as variate as possible. Note that we ignore: order of words, case of the text, common words (Ex: the, and, etc..) and punctuation.
                </small>
              </FormText>
            </div>
          </FormGroup>
        </InputField>
        <FormGroup
          tag="div"
        >
          <div
            className="form-group"
          >
            <Button
              className="mr-2"
              color="primary"
              disabled={false}
              tag="button"
              type="submit"
            >
              <button
                className="mr-2 btn btn-primary"
                disabled={false}
                onClick={[Function]}
                type="submit"
              >
                Create Request
              </button>
            </Button>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</ManageRequestItem>
`;

exports[`ManageRequestItem component should display empty 1`] = `
<ManageRequestItem
  requests={
    Immutable.List [
    ]
  }
>
  <div>
    <Breadcrumb
      tag="ol"
    >
      <ol
        className="breadcrumb"
      >
        <BreadcrumbItem
          tag="li"
        >
          <li
            className="breadcrumb-item"
          >
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/settings/requests"
            >
              <a
                onClick={[Function]}
                style={Object {}}
              >
                Manage Requests
              </a>
            </Link>
          </li>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          <li
            className="active breadcrumb-item"
          >
            Create Request
          </li>
        </BreadcrumbItem>
      </ol>
    </Breadcrumb>
    <h1
      className="mb-3"
    >
      Create Request
    </h1>
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <InputField
          help="The request name will appear on the ticket (similar to tags). Try to keep it short and simple."
          label="Name"
          name="name"
          onChange={[Function]}
          placeholder="Refund policy"
          required={true}
          type="text"
          value=""
        >
          <FormGroup
            className="undefined"
            color=""
            tag="div"
          >
            <div
              className="undefined form-group"
            >
              <Label
                className="control-label"
                htmlFor="id-name"
                tag="label"
              >
                <label
                  className="control-label  form-control-label"
                  htmlFor="id-name"
                >
                  Name
                </label>
              </Label>
              <div
                className=""
              >
                <Input
                  className=""
                  id="id-name"
                  onChange={[Function]}
                  placeholder="Refund policy"
                  required={true}
                  tag="p"
                  type="text"
                  value=""
                >
                  <input
                    className="form-control"
                    id="id-name"
                    onChange={[Function]}
                    placeholder="Refund policy"
                    required={true}
                    type="text"
                    value=""
                  />
                </Input>
              </div>
              <FormText
                color="muted"
                tag="small"
              >
                <small
                  className="form-text text-muted"
                >
                  The request name will appear on the ticket (similar to tags). Try to keep it short and simple.
                </small>
              </FormText>
            </div>
          </FormGroup>
        </InputField>
        <InputField
          help="One example sentence per line. For best results: keep them short (5-10 words), as many and as variate as possible. Note that we ignore: order of words, case of the text, common words (Ex: the, and, etc..) and punctuation."
          label="Sample statements"
          name="samples"
          onChange={[Function]}
          required={true}
          rows={2}
          type="textarea"
          value=""
        >
          <FormGroup
            className="undefined"
            color=""
            tag="div"
          >
            <div
              className="undefined form-group"
            >
              <Label
                className="control-label"
                htmlFor="id-samples"
                tag="label"
              >
                <label
                  className="control-label  form-control-label"
                  htmlFor="id-samples"
                >
                  Sample statements
                </label>
              </Label>
              <div
                className=""
              >
                <Input
                  className=""
                  id="id-samples"
                  onChange={[Function]}
                  required={true}
                  rows={2}
                  tag="p"
                  type="textarea"
                  value=""
                >
                  <textarea
                    className="form-control"
                    id="id-samples"
                    onChange={[Function]}
                    required={true}
                    rows={2}
                    value=""
                  />
                </Input>
              </div>
              <FormText
                color="muted"
                tag="small"
              >
                <small
                  className="form-text text-muted"
                >
                  One example sentence per line. For best results: keep them short (5-10 words), as many and as variate as possible. Note that we ignore: order of words, case of the text, common words (Ex: the, and, etc..) and punctuation.
                </small>
              </FormText>
            </div>
          </FormGroup>
        </InputField>
        <FormGroup
          tag="div"
        >
          <div
            className="form-group"
          >
            <Button
              className="mr-2"
              color="primary"
              disabled={false}
              tag="button"
              type="submit"
            >
              <button
                className="mr-2 btn btn-primary"
                disabled={false}
                onClick={[Function]}
                type="submit"
              >
                Create Request
              </button>
            </Button>
          </div>
        </FormGroup>
      </form>
    </Form>
  </div>
</ManageRequestItem>
`;
